--- a/pair.html
+++ b/pair.html
@@ -31,7 +31,7 @@
     
     body {
       font-family: 'Poppins', sans-serif;
-      background: url('/MegaThmb/thumb1.jpg') no-repeat center center fixed;
+      background: url('MegaThmb/thumb1.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
