--- a/pair.html
+++ b/pair.html
@@ -496,7 +496,7 @@
       height: 100%;
     }
     body {
-      background-image: url('MegaThmb/thumb1.jpg'); /* Path to your background */
+      background-image: url('../MegaThmb/thumb1.jpg'); /* Path to your background */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
