--- a/pair.html
+++ b/pair.html
@@ -31,7 +31,7 @@
     
     body {
       font-family: 'Poppins', sans-serif;
-      background: url('MegaThmb/thumb1.jpg') no-repeat center center fixed;
+      background: url('thumb1.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
@@ -496,7 +496,7 @@
       height: 100%;
     }
     body {
-      background-image: url('../MegaThmb/thumb1.jpg'); /* Path to your background */
+      background-image: url('MegaThmb/thumb1.jpg'); /* Path to your background */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
