--- a/pair.html
+++ b/pair.html
@@ -31,7 +31,7 @@
     
     body {
       font-family: 'Poppins', sans-serif;
-      background: url('thumb1.jpg') no-repeat center center fixed;
+      background: url('https://cdn.ironman.my.id/i/5xtyu7.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
@@ -360,7 +360,6 @@
     }
   </style>
 </head>
-<canvas id="canvas" style="position: absolute; top: 0; left: 0;"></canvas>
 <body>
   <div class="container">
     <div class="card">
@@ -483,76 +482,5 @@
       }
     });
   </script>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Transparent Canvas Animation</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      height: 100%;
-    }
-    body {
-      background-image: url('https://files.catbox.moe/c29z2z.jpg'); /* Path to your background */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-    canvas {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-  <script>
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    const circles = [];
-
-    for (let i = 0; i < 30; i++) {
-      circles.push({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height,
-r: 10 + Math.random() * 20,
-        dx: -2 + Math.random() * 4,
-        dy: -2 + Math.random() * 4,
-        color: `hsl(${Math.random() * 360}, 70%, 60%)`
-      });
-    }
-
-    function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height); // Transparent clear
-
-      for (let circle of circles) {
-        ctx.beginPath();
-        ctx.arc(circle.x, circle.y, circle.r, 0, Math.PI * 2);
-        ctx.fillStyle = circle.color;
-        ctx.fill();
-
-        circle.x += circle.dx;
-        circle.y += circle.dy;
-
-        if (circle.x < 0 || circle.x > canvas.width) circle.dx *= -1;
-        if (circle.y < 0 || circle.y > canvas.height) circle.dy *= -1;
-      }
-
-      requestAnimationFrame(animate);
-    }
-
-    animate();
-  </script>
-</body>
-</html>
 </body>
 </html>
