--- a/pair.html
+++ b/pair.html
@@ -5,105 +5,125 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MEGA-MD GLOBAL PAIRING</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background: url('thumb1.jpg') no-repeat center center fixed;
+      font-family: "Poppins", sans-serif;
+      background: url("thumb1.jpg") no-repeat center center fixed;
       background-size: cover;
       display: flex;
-      justify-content: center;
       align-items: center;
-      min-height: 100vh;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
       color: #fff;
     }
+
     .card {
-      background: rgba(0, 0, 0, 0.55);
-      padding: 30px;
+      background: rgba(255, 255, 255, 0.09);
+      backdrop-filter: blur(8px);
       border-radius: 16px;
-      backdrop-filter: blur(12px);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-      width: 350px;
+      padding: 30px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
       text-align: center;
+      width: 340px;
+      position: relative;
+      border: 1px solid rgba(255, 255, 255, 0.15);
     }
+
     h2 {
-      font-size: 24px;
-      margin-bottom: 10px;
+      background: linear-gradient(90deg, #25D366, #ffffff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 700;
+    }
+
+    .logo i {
+      font-size: 60px;
       color: #25D366;
     }
-    p {
-      color: #cbd5e1;
-      font-size: 14px;
-      margin-bottom: 20px;
-    }
+
     #qr {
-      display: none;
-      margin: 20px auto;
-      border: 3px solid #25D366;
-      border-radius: 10px;
       width: 250px;
       height: 250px;
-      object-fit: cover;
-      padding: 10px;
-      background: rgba(255,255,255,0.1);
+      background: rgba(255, 255, 255, 0.07);
+      border-radius: 12px;
+      margin: 25px auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      border: 1px solid rgba(255, 255, 255, 0.15);
     }
-    #status {
-      margin-top: 10px;
-      color: #94a3b8;
-      font-size: 14px;
+
+    .loading {
+      border: 4px solid rgba(255, 255, 255, 0.2);
+      border-top: 4px solid #25D366;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
     }
-    .btn {
-      background: linear-gradient(135deg, #25D366, #128C7E);
-      border: none;
-      border-radius: 10px;
-      color: #fff;
-      padding: 15px;
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    p {
+      font-size: 13px;
+      opacity: 0.8;
+    }
+
+    a.button {
+      display: inline-block;
+      margin: 10px 0;
+      padding: 10px 18px;
+      border-radius: 8px;
+      background: linear-gradient(90deg, #25D366, #128C7E);
+      color: white;
+      text-decoration: none;
       font-weight: 600;
-      cursor: pointer;
       transition: 0.3s;
-      width: 100%;
     }
-    .btn:hover {
+
+    a.button:hover {
       transform: translateY(-2px);
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <i class="fab fa-whatsapp fa-3x" style="color:#25D366"></i>
-    <h2>MEGA-MD QR PAIRING</h2>
-    <p>Click below to generate a QR and scan it with your WhatsApp to link.</p>
-    <button class="btn" id="generateBtn"><i class="fas fa-qrcode"></i> Generate QR</button>
-    <img id="qr" alt="QR Code" />
-    <div id="status">Waiting for action...</div>
+    <div class="logo"><i class="fab fa-whatsapp"></i></div>
+    <h2>MEGA-MD GLOBAL PAIRING</h2>
+    <p>Scan the QR below using WhatsApp (Linked Devices)</p>
+
+    <div id="qr"><div class="loading"></div></div>
+
+    <p id="status">Waiting for QR...</p>
+
+    <a href="https://wa.me/256783991705" target="_blank" class="button"><i class="fab fa-whatsapp"></i> Contact Owner</a>
+    <a href="https://whatsapp.com/channel/0029Vb6covl05MUWlqZdHI2w" target="_blank" class="button"><i class="fab fa-whatsapp"></i> Channel</a>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
   <script>
-    const btn = document.getElementById('generateBtn');
-    const qrImg = document.getElementById('qr');
-    const status = document.getElementById('status');
-
-    btn.addEventListener('click', async () => {
-      btn.disabled = true;
-      btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Generating QR...';
-      status.textContent = 'Contacting Mega-MD server...';
+    async function loadQR() {
+      const qrBox = document.getElementById("qr");
+      const status = document.getElementById("status");
       try {
-        const { data } = await axios.get('/qr');
+        const res = await fetch(`/qr?user=${Date.now()}`);
+        const data = await res.json();
         if (data.qr) {
-          qrImg.src = `https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=${encodeURIComponent(data.qr)}`;
-          qrImg.style.display = 'block';
-          status.textContent = 'Scan the QR with your WhatsApp app.';
+          qrBox.innerHTML = `<img src="${data.qr}" alt="QR Code" style="width:100%;border-radius:12px;">`;
+          status.textContent = "Scan this QR with WhatsApp Linked Devices";
         } else {
-          status.textContent = 'QR not received. Try again.';
+          status.textContent = "QR not received. Refresh to retry.";
         }
-      } catch (err) {
-        status.textContent = 'Service unavailable. Try again later.';
-      } finally {
-        btn.disabled = false;
-        btn.innerHTML = '<i class="fas fa-qrcode"></i> Generate QR';
+      } catch (e) {
+        status.textContent = "Failed to fetch QR.";
       }
-    });
+    }
+    loadQR();
   </script>
 </body>
 </html>
