--- a/pair.html
+++ b/pair.html
@@ -3,127 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MEGA-MD GLOBAL PAIRING</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <title>MEGA-MD PAIR</title>
   <style>
     body {
-      font-family: "Poppins", sans-serif;
-      background: url("thumb1.jpg") no-repeat center center fixed;
-      background-size: cover;
+      background: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      margin: 0;
-      color: #fff;
+      flex-direction: column;
     }
-
-    .card {
-      background: rgba(255, 255, 255, 0.09);
-      backdrop-filter: blur(8px);
-      border-radius: 16px;
-      padding: 30px;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
-      text-align: center;
-      width: 340px;
-      position: relative;
-      border: 1px solid rgba(255, 255, 255, 0.15);
-    }
-
-    h2 {
-      background: linear-gradient(90deg, #25D366, #ffffff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      font-weight: 700;
-    }
-
-    .logo i {
-      font-size: 60px;
-      color: #25D366;
-    }
-
-    #qr {
-      width: 250px;
-      height: 250px;
-      background: rgba(255, 255, 255, 0.07);
-      border-radius: 12px;
-      margin: 25px auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      border: 1px solid rgba(255, 255, 255, 0.15);
-    }
-
-    .loading {
-      border: 4px solid rgba(255, 255, 255, 0.2);
-      border-top: 4px solid #25D366;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    p {
-      font-size: 13px;
-      opacity: 0.8;
-    }
-
-    a.button {
-      display: inline-block;
-      margin: 10px 0;
-      padding: 10px 18px;
+    input {
+      padding: 10px;
+      font-size: 16px;
       border-radius: 8px;
-      background: linear-gradient(90deg, #25D366, #128C7E);
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      transition: 0.3s;
+      border: none;
+      margin: 10px 0;
+      width: 250px;
+      text-align: center;
     }
-
-    a.button:hover {
-      transform: translateY(-2px);
+    button {
+      padding: 10px 20px;
+      background: #25D366;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      color: #fff;
+      font-weight: bold;
+    }
+    #code {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #0f0;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <div class="logo"><i class="fab fa-whatsapp"></i></div>
-    <h2>MEGA-MD GLOBAL PAIRING</h2>
-    <p>Scan the QR below using WhatsApp (Linked Devices)</p>
-
-    <div id="qr"><div class="loading"></div></div>
-
-    <p id="status">Waiting for QR...</p>
-
-    <a href="https://wa.me/256783991705" target="_blank" class="button"><i class="fab fa-whatsapp"></i> Contact Owner</a>
-    <a href="https://whatsapp.com/channel/0029Vb6covl05MUWlqZdHI2w" target="_blank" class="button"><i class="fab fa-whatsapp"></i> Channel</a>
-  </div>
+  <h2>MEGA-MD SESSION GENERATOR</h2>
+  <p>Enter your WhatsApp number (with country code):</p>
+  <input type="text" id="num" placeholder="e.g. 256700000000" />
+  <button onclick="pair()">Generate Pairing Code</button>
+  <div id="code"></div>
 
   <script>
-    async function loadQR() {
-      const qrBox = document.getElementById("qr");
-      const status = document.getElementById("status");
+    async function pair() {
+      const num = document.getElementById("num").value.trim();
+      const codeDiv = document.getElementById("code");
+      codeDiv.textContent = "⏳ Generating...";
       try {
-        const res = await fetch(`/qr?user=${Date.now()}`);
+        const res = await fetch(`/pair?number=${num}`);
         const data = await res.json();
-        if (data.qr) {
-          qrBox.innerHTML = `<img src="${data.qr}" alt="QR Code" style="width:100%;border-radius:12px;">`;
-          status.textContent = "Scan this QR with WhatsApp Linked Devices";
+        if (data.code) {
+          codeDiv.textContent = `✅ Your WhatsApp Pairing Code: ${data.code}`;
         } else {
-          status.textContent = "QR not received. Refresh to retry.";
+          codeDiv.textContent = "❌ Failed to generate code, try again.";
         }
-      } catch (e) {
-        status.textContent = "Failed to fetch QR.";
+      } catch (err) {
+        codeDiv.textContent = "⚠️ Error connecting to server.";
       }
     }
-    loadQR();
   </script>
 </body>
 </html>
